# tensara-cli

./: .env.example  .gitignore  CNAME  Cargo.toml  README.md  build.rs  install.ps1  install.sh  submission.json  test.cu
.github/workflows/: rust.yml
src/: auth.rs  client.rs  commands.rs  init.rs  lib.rs  main.rs  parser.rs  pretty.rs  problems.rs  trpc.rs
tests/: conv1dwrong.cu  sol.cu  sol.py
