[package]
name = "tensara"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indicatif = "0.17.11"
console = "0.15.11"
dotenv = "0.15.0"
reqwest = { version = "0.12.14", features = ["blocking"] }