[package]
name = "tensara"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indicatif = "0.17.11"
console = "0.15.11"
dotenv = "0.15.0"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
dirs = "6.0.0"
oauth2 = "5.0.0"
webbrowser = "1.0.4"
urlencoding = "2.1"
